--- a/index.html
+++ b/index.html
@@ -3,113 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV_Abdoulaye_DOUYON</title>
+    <title>
+        CV_Abdoulaye_DOUYON
+    </title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-
     <div id="PageA4">
+        <header>
             <!--Photo-->
-        <div class="photo">
-            <img src="img/Image1.png" alt="Photo de profil">
-        </div>
-        <!--Prenom&Nom Profession-->
-        <div class="identi">
-            <span class="Pren_Nom">ABDOULAYE DOUYON</span><br>
-            <span class="Profession">Analyste / Développeur</span>
-        </div><br><br>
-        <!--Contacts-->
-        <div class="contact">
-            <table>
-                <tr class="contact1">
-                    <td class="contact1">TELEPHONE</td>
-                    <td class="contact1">EMAIL</td>
-                </tr>
-                <tr contact2>
-                    <img src="img/phone.png" alt="telephone" class="icon_phone"><td class="contact2"> +223 92 25 70 11</td>
-                    <img src="img/email.png" alt="email" class="icon_mail"><td class="contact2"> abdoulayedouyon.ad@gmail.com</td>
-                </tr>
-            </table>
-
-        </div> <br><br><br><br>
-        <!--PROFILE-->
-        <div>
+            <div class="photo">
+                <img src="img/Image1.png" alt="Photo de profil">
+            </div>
+            <!--Prenom&Nom Profession-->
+            <div class="identi">
+                <span class="Pren_Nom">
+                    ABDOULAYE DOUYON
+                </span><br>
+                <span class="Profession">
+                    Analyste / Développeur
+                </span>
+            </div><br><br>
+            <!--Contacts-->
+            <div class="contact">
+                <img src="img/phone.png" alt="telephone" class="icon_phone">
+                <img src="img/email.png" alt="email" class="icon_mail">
+                <table>
+                    <tr class="contact1">
+                        <td class="contact1">TELEPHONE</td>
+                        <td class="contact1">EMAIL</td>
+                    </tr>
+                    <tr class="contact2">
+                        <td class="contact2"> +223 92 25 70 11</td>
+                        <td class="contact2"> abdoulayedouyon.ad@gmail.com</td>
+                    </tr>
+                </table>
+            </div> <br><br><br><br>
+        </header>
+        <main>
+            <!--PROFILE-->
             <!--PROFILE-Entete-->
-            <div>
-                <div class="titre">PROFILE</div>
-                <div class="text_profil">
-                    Étudiant spécialisé en developpement web et mobile. 
-                    Dans ce CV se trouve mon expérience en conception de 
-                    logiciel web et mobile. Des choses que je réalise à 
-                    travers des projets et des travaux. Par conséquent, 
-                    je souhaite qu'un emploi commençant par le developpement 
-                    soit une carrière pour stabiliser et améliorer mes compétences.
+            <div class="titre">
+                PROFILE
+            </div>
+            <!--PROFILE-texte-->
+            <div class="text_profil">
+                Étudiant spécialisé en developpement web et mobile. 
+                Dans ce CV se trouve mon expérience en conception de 
+                logiciel web et mobile. Des choses que je réalise à 
+                travers des projets et des travaux. Par conséquent, 
+                je souhaite qu'un emploi commençant par le developpement 
+                soit une carrière pour stabiliser et améliorer mes compétences.
+            </div>
+            <!--PARCOURS-->
+            <!--PARCOURS-Entete-->
+            <div class="titre">
+                PARCOURS
+            </div>
+            <!--bloc div pour mettre les barres verticales a gauche des items(PARCOURS)-->
+            <div class="trait"></div>
+            <div class="trait_right"></div>
+            <!--Utilisation de grid pour diviser "container"en deux colonnes et des items pour chaque parcours-->
+            <div class="container">
+                <div class="item">
+                    <d1 class="parcour_titre">ODK en cours</d1> <br>
+                    <d1 class="parcour_cont">Developpeur Full-Stack</d1><br>
+                    <d1 class="parcour_titre">2024</d1>
+                </div>
+                <div class="item">
+                    <d1 class="parcour_titre">DUT Electronique Maintenance Informatique</d1> <br>
+                    <d1 class="parcour_cont">TecnoLab-ISTA</d1><br>
+                    <d1 class="parcour_titre">2021-2023</d1>
+                </div>
+                <div class="item">
+                    <d1 class="parcour_titre">Licence Génie Biologique</d1> <br>
+                    <d1 class="parcour_cont">Institut des Sciences Appliquées</d1><br>
+                    <d1 class="parcour_titre">2024</d1>
+                </div>
+                <div class="item">
+                    <d1 class="parcour_titre">Baccalauréat Malien</d1> <br>
+                    <d1 class="parcour_cont">Terminale Sciences Expérimentales</d1><br>
+                    <d1 class="parcour_titre">2014-2017</d1>
                 </div>
             </div>
-        </div>
-            <!--PARCOURS-->
-            <div class="titre">PARCOURS</div><br>
-            <!--Utilisation de grid dans container et des parcours comme item-->
+            <!--EXPERIENCES-->
+            <!--EXPERIENCES-Entete-->
+            <div class="titre">
+                EXPERIENCES
+            </div>
+            <!--bloc div pour mettre les barres verticales a gauche des items(EXPERIENCES)-->
+            <div class="trait2"></div>
+            <div class="trait2_2"></div>
+            <div class="trait2_right"></div>
+            <div class="trait2_2_right"></div>
+            <!--Utilisation de grid pour diviser "container"en deux colonnes et des items pour chaque experience-->
             <div class="container">
                 <div class="item">
-                    <o class="parcour_titre">ODK en cours</o> <br>
-                    <o class="parcour_cont">Developpeur Full-Stack</o><br>
-                    <o class="parcour_titre">2024</o>
+                    <d1 class="parcour_titre">Stage Bio-Médicale</d1> <br>
+                    <d1 class="parcour_cont">Hôpital du point-G</d1><br>
+                    <d1 class="parcour_titre">09 août - 10 Septembre 2023</d1>
                 </div>
                 <div class="item">
-                    <o class="parcour_titre">DUT Electronique Maintenance Informatique</o> <br>
-                    <o class="parcour_cont">TecnoLab-ISTA</o><br>
-                    <o class="parcour_titre">2021-2023</o>
+                    <d1 class="parcour_titre">Gestion de données scolaires</d1> <br>
+                    <d1 class="parcour_cont">CSTD</d1><br>
+                    <d1 class="parcour_titre">2022 à nos jours</d1>
                 </div>
                 <div class="item">
-                    <o class="parcour_titre">Licence Génie Biologique</o> <br>
-                    <o class="parcour_cont">Institut des Sciences Appliquées</o><br>
-                    <o class="parcour_titre">2024</o>
+                    <d1 class="parcour_titre">Certfication en ITE</d1> <br>
+                    <d1 class="parcour_cont">CISCO</d1><br>
+                    <d1 class="parcour_titre">2023</d1>
                 </div>
                 <div class="item">
-                    <o class="parcour_titre">Baccalauréat Malien</o> <br>
-                    <o class="parcour_cont">Terminale Sciences Expérimentales</o><br>
-                    <o class="parcour_titre">2014-2017</o>
+                    <d1 class="parcour_titre">Conception des cartes</d1> <br>
+                    <d1 class="parcour_cont">Divers établissements</d1><br>
+                    <d1 class="parcour_titre">depuis 2021</d1>
                 </div>
+                <div class="item">
+                    <d1 class="parcour_titre">Réparation d'ordinateurs</d1> <br>
+                    <d1 class="parcour_cont">depuis 2021</d1><br>
+                    <d1 class="parcour_titre"></d1>
+                </div>
+                <div class="item">
+                    <d1 class="parcour_titre">Conception de site web</d1> <br>
+                    <d1 class="parcour_cont">Académique</d1><br>
+                    <d1 class="parcour_titre"></d1>
+                </div>
+            </div>
+            <!--COMPETENCES-->
+            <!--COMPETENCES-Entete-->
+            <div class="titre">
+                COMPETENCES
             </div><br>
-        <!--EXPERIENCES-->
-            <div class="titre">EXPERIENCES</div><br>
-            <div class="container">
-                <div class="item">
-                    <o class="parcour_titre">Stage Bio-Médicale</o> <br>
-                    <o class="parcour_cont">Hôpital du point-G</o><br>
-                    <o class="parcour_titre">09 août - 10 Septembre 2023</o>
-                </div>
-                <div class="item">
-                    <o class="parcour_titre">Gestion de données scolaires</o> <br>
-                    <o class="parcour_cont">CSTD</o><br>
-                    <o class="parcour_titre">2022 à nos jours</o>
-                </div>
-                <div class="item">
-                    <o class="parcour_titre">Certfication en ITE</o> <br>
-                    <o class="parcour_cont">CISCO</o><br>
-                    <o class="parcour_titre">2023</o>
-                </div>
-                <div class="item">
-                    <o class="parcour_titre">Conception des cartes</o> <br>
-                    <o class="parcour_cont">Divers établissements</o><br>
-                    <o class="parcour_titre">depuis 2021</o>
-                </div>
-                <div class="item">
-                    <o class="parcour_titre">Réparation d'ordinateurs</o> <br>
-                    <o class="parcour_cont"></o><br>
-                    <o class="parcour_titre">depuis 2021</o>
-                </div>
-                <div class="item">
-                    <o class="parcour_titre">Conception de site web</o> <br>
-                    <o class="parcour_cont">Académique</o><br>
-                    <o class="parcour_titre"></o>
-                </div>
-            </div><br>
-        <!--COMPETENCES-->
-        <div>
-            <div class="titre">COMPETENCES</div><br>
             <!--Tableau contenant les competences-->
             <table class="competence">
                 <tr>
@@ -128,14 +153,16 @@
                     <td><progress value="40" max="100">HTML</progress></td>
                 </tr>
             </table><br>
+        </main>
+        <footer>
             <!--Interet-->
             <div class="interet">
                 <span style="padding-right: 50px;">INTERETS</span>
                 <span class="int"><img src="img/sport.png" alt="sport" class="img_interet">  SPORT</span>
                 <span class="int"><img src="img/musique.png" alt="musique" class="img_interet">  MUSIQUE</span>
                 <span class="int"><img src="img/code.png" alt="code" class="img_interet">  CODE</span>
-            </div> 
-        </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
