essai avec le deploiement workflow

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!--PARCOURS-->
             <!--PARCOURS-Entete-->
             <div class="titre">
-                PARCOURS
+                LES PARCOURS
             </div>
             <!--bloc div pour mettre les barres verticales a gauche des items(PARCOURS)-->
             <div class="trait"></div>
