--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         CV_Abdoulaye_DOUYON
     </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
