--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <!--Photo-->
             <div class="photo">
-                <img src="img/Image1.png" alt="Photo de profil">
+                <img src="./img/Image1.png" alt="Photo de profil">
             </div>
             <!--Prenom&Nom Profession-->
             <div class="identi">
@@ -27,8 +27,8 @@
             </div><br><br>
             <!--Contacts-->
             <div class="contact">
-                <img src="img/phone.png" alt="telephone" class="icon_phone">
-                <img src="img/email.png" alt="email" class="icon_mail">
+                <img src="./img/phone.png" alt="telephone" class="icon_phone">
+                <img src="./img/email.png" alt="email" class="icon_mail">
                 <table>
                     <tr class="contact1">
                         <td class="contact1">TELEPHONE</td>
