--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <!--Photo-->
             <div class="photo">
-                <img src="./img/Image1.png" alt="Photo de profil">
+                <img src="./images/Image1.png" alt="Photo de profil">
             </div>
             <!--Prenom&Nom Profession-->
             <div class="identi">
@@ -27,8 +27,8 @@
             </div><br><br>
             <!--Contacts-->
             <div class="contact">
-                <img src="./img/phone.png" alt="telephone" class="icon_phone">
-                <img src="./img/email.png" alt="email" class="icon_mail">
+                <img src="./images/phone.png" alt="telephone" class="icon_phone">
+                <img src="./images/email.png" alt="email" class="icon_mail">
                 <table>
                     <tr class="contact1">
                         <td class="contact1">TELEPHONE</td>
@@ -158,9 +158,9 @@
             <!--Interet-->
             <div class="interet">
                 <span style="padding-right: 50px;">INTERETS</span>
-                <span class="int"><img src="img/sport.png" alt="sport" class="img_interet">  SPORT</span>
-                <span class="int"><img src="img/musique.png" alt="musique" class="img_interet">  MUSIQUE</span>
-                <span class="int"><img src="img/code.png" alt="code" class="img_interet">  CODE</span>
+                <span class="int"><img src="./images/sport.png" alt="sport" class="img_interet">  SPORT</span>
+                <span class="int"><img src="./images/musique.png" alt="musique" class="img_interet">  MUSIQUE</span>
+                <span class="int"><img src="./images/code.png" alt="code" class="img_interet">  CODE</span>
             </div>
         </footer>
     </div>
