--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
             <!--Utilisation de grid pour diviser "container"en deux colonnes et des items pour chaque parcours-->
             <div class="container">
                 <div class="item">
-                    <d1 class="parcour_titre">ODK en cours</d1> <br>
-                    <d1 class="parcour_cont">Developpeur Full-Stack</d1><br>
-                    <d1 class="parcour_titre">2024</d1>
+                    <p class="parcour_titre">ODK en cours</p> <br>
+                    <p class="parcour_cont">Developpeur Full-Stack</p><br>
+                    <p class="parcour_titre">2024</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">DUT Electronique Maintenance Informatique</d1> <br>
-                    <d1 class="parcour_cont">TecnoLab-ISTA</d1><br>
-                    <d1 class="parcour_titre">2021-2023</d1>
+                    <p class="parcour_titre">DUT Electronique Maintenance Informatique</p> <br>
+                    <p class="parcour_cont">TecnoLab-ISTA</p><br>
+                    <p class="parcour_titre">2021-2023</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Licence Génie Biologique</d1> <br>
-                    <d1 class="parcour_cont">Institut des Sciences Appliquées</d1><br>
-                    <d1 class="parcour_titre">2024</d1>
+                    <p class="parcour_titre">Licence Génie Biologique</p> <br>
+                    <p class="parcour_cont">Institut des Sciences Appliquées</p><br>
+                    <p class="parcour_titre">2024</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Baccalauréat Malien</d1> <br>
-                    <d1 class="parcour_cont">Terminale Sciences Expérimentales</d1><br>
-                    <d1 class="parcour_titre">2014-2017</d1>
+                    <p class="parcour_titre">Baccalauréat Malien</p> <br>
+                    <p class="parcour_cont">Terminale Sciences Expérimentales</p><br>
+                    <p class="parcour_titre">2014-2017</p>
                 </div>
             </div>
             <!--EXPERIENCES-->
@@ -100,34 +100,34 @@
             <!--Utilisation de grid pour diviser "container"en deux colonnes et des items pour chaque experience-->
             <div class="container">
                 <div class="item">
-                    <d1 class="parcour_titre">Stage Bio-Médicale</d1> <br>
-                    <d1 class="parcour_cont">Hôpital du point-G</d1><br>
-                    <d1 class="parcour_titre">09 août - 10 Septembre 2023</d1>
+                    <p class="parcour_titre">Stage Bio-Médicale</p> <br>
+                    <p class="parcour_cont">Hôpital du point-G</p><br>
+                    <p class="parcour_titre">09 août - 10 Septembre 2023</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Gestion de données scolaires</d1> <br>
-                    <d1 class="parcour_cont">CSTD</d1><br>
-                    <d1 class="parcour_titre">2022 à nos jours</d1>
+                    <p class="parcour_titre">Gestion de données scolaires</p> <br>
+                    <p class="parcour_cont">CSTD</p><br>
+                    <p class="parcour_titre">2022 à nos jours</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Certfication en ITE</d1> <br>
-                    <d1 class="parcour_cont">CISCO</d1><br>
-                    <d1 class="parcour_titre">2023</d1>
+                    <p class="parcour_titre">Certfication en ITE</p> <br>
+                    <p class="parcour_cont">CISCO</p><br>
+                    <p class="parcour_titre">2023</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Conception des cartes</d1> <br>
-                    <d1 class="parcour_cont">Divers établissements</d1><br>
-                    <d1 class="parcour_titre">depuis 2021</d1>
+                    <p class="parcour_titre">Conception des cartes</p> <br>
+                    <p class="parcour_cont">Divers établissements</p><br>
+                    <p class="parcour_titre">depuis 2021</p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Réparation d'ordinateurs</d1> <br>
-                    <d1 class="parcour_cont">depuis 2021</d1><br>
-                    <d1 class="parcour_titre"></d1>
+                    <p class="parcour_titre">Réparation d'ordinateurs</p> <br>
+                    <p class="parcour_cont">depuis 2021</p><br>
+                    <p class="parcour_titre"></p>
                 </div>
                 <div class="item">
-                    <d1 class="parcour_titre">Conception de site web</d1> <br>
-                    <d1 class="parcour_cont">Académique</d1><br>
-                    <d1 class="parcour_titre"></d1>
+                    <p class="parcour_titre">Conception de site web</p> <br>
+                    <p class="parcour_cont">Académique</p><br>
+                    <p class="parcour_titre"></p>
                 </div>
             </div>
             <!--COMPETENCES-->
