--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     ABDOULAYE DOUYON
                 </span><br>
                 <span class="Profession">
-                    Analyste / Développeur
+                    Informaticien
                 </span>
             </div><br><br>
             <!--Contacts-->
@@ -49,12 +49,13 @@
             </div>
             <!--PROFILE-texte-->
             <div class="text_profil">
-                Étudiant spécialisé en developpement web et mobile. 
-                Dans ce CV se trouve mon expérience en conception de 
-                logiciel web et mobile. Des choses que je réalise à 
-                travers des projets et des travaux. Par conséquent, 
-                je souhaite qu'un emploi commençant par le developpement 
-                soit une carrière pour stabiliser et améliorer mes compétences.
+                Étudiant passionné spécialisé en développement web et mobile, 
+                avec une solide formation en sciences biologiques. 
+                Je suis déterminé à appliquer mes compétences en développement logiciel 
+                pour créer des solutions innovantes 
+                dans le domaine de la biologie et de la santé, 
+                tout en continuant à élargir mes connaissances 
+                et mes compétences dans le domaine du développement logiciel.
             </div>
             <!--PARCOURS-->
             <!--PARCOURS-Entete-->
@@ -157,10 +158,10 @@
         <footer>
             <!--Interet-->
             <div class="interet">
-                <span style="padding-right: 50px;">INTERETS</span>
-                <span class="int"><img src="./images/sport.png" alt="sport" class="img_interet">  SPORT</span>
-                <span class="int"><img src="./images/musique.png" alt="musique" class="img_interet">  MUSIQUE</span>
-                <span class="int"><img src="./images/code.png" alt="code" class="img_interet">  CODE</span>
+                <span style="padding-right: 10px; font-weight: bold;">INTERETS</span>
+                <span class="int"><img src="./images/sport.png" alt="sport" class="img_interet">  Développement Logiciel</span>
+                <span class="int"><img src="./images/musique.png" alt="musique" class="img_interet">  Technologie et Innovation</span>
+                <span class="int"><img src="./images/code.png" alt="code" class="img_interet">  Sciences Biologiques</span>
             </div>
         </footer>
     </div>
