--- a/index.html
+++ b/index.html
@@ -7,39 +7,42 @@
         CV_Abdoulaye_DOUYON
     </title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsivite.css">
+    <!-- <link rel="stylesheet" href="./css/style620.css"> -->
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-    <div id="PageA4">
+    <div id="">
         <header>
-            <!--Photo-->
-            <div class="photo">
-                <img src="./images/Image1.png" alt="Photo de profil">
+            <div class="entete">
+                <div class="entete_item bloc_info">
+                    <div class="bloc_info_item">
+                        <span class="Pren_Nom">
+                            ABDOULAYE DOUYON
+                        </span><br>
+                        <span class="Profession">
+                            Informaticien
+                        </span>
+                    </div>
+                    <div class="bloc_info_item contact_container">
+                        <div class="contact_item">
+                            <p>TELEPHONE</p>
+                            <p><img src="./images/phone.png" alt="telephone" class="icon_phone">+223 92 25 70 11</p>
+                        </div>
+                        <div class="contact_item email">
+                            <p>EMAIL</p>
+                            <p><img src="./images/email.png" alt="email" class="icon_mail"> abdoulayedouyon.ad@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="entete_item bloc_image">
+                    <span class="photo">
+                        <img src="./images/Image1.png" alt="Photo de profil">
+                    </span>
+                </div>
+            </div>                                  
+                
             </div>
-            <!--Prenom&Nom Profession-->
-            <div class="identi">
-                <span class="Pren_Nom">
-                    ABDOULAYE DOUYON
-                </span><br>
-                <span class="Profession">
-                    Informaticien
-                </span>
-            </div><br><br>
-            <!--Contacts-->
-            <div class="contact">
-                <img src="./images/phone.png" alt="telephone" class="icon_phone">
-                <img src="./images/email.png" alt="email" class="icon_mail">
-                <table>
-                    <tr class="contact1">
-                        <td class="contact1">TELEPHONE</td>
-                        <td class="contact1">EMAIL</td>
-                    </tr>
-                    <tr class="contact2">
-                        <td class="contact2"> +223 92 25 70 11</td>
-                        <td class="contact2"> abdoulayedouyon.ad@gmail.com</td>
-                    </tr>
-                </table>
-            </div> <br><br><br><br>
         </header>
         <main>
             <!--PROFILE-->
@@ -136,32 +139,32 @@
             <div class="titre">
                 COMPETENCES
             </div><br>
-            <!--Tableau contenant les competences-->
-            <table class="competence">
-                <tr>
-                    <th>HTML</th>
-                    <th>MySql</th>
-                    <th>CSS</th>
-                    <th>ACCESS</th>
-                    <th>JavaScript</th>
-                </tr>
-                <!--Les barres de progressions-->
-                <tr>
-                    <td><progress value="80" max="100">HTML</progress></td>
-                    <td><progress value="60" max="100">HTML</progress></td>
-                    <td><progress value="40" max="100">HTML</progress></td>
-                    <td><progress value="90" max="100">HTML</progress></td>
-                    <td><progress value="40" max="100">HTML</progress></td>
-                </tr>
-            </table><br>
+            <!--les competences-->
+            <div class="competence_container">
+                <div class="competence_item">
+                    <p>HTML</p><progress value="80" max="100">HTML</progress>
+                </div>
+                <div class="competence_item">
+                    <p>MySQL</p><progress value="40" max="100">HTML</progress>
+                </div>
+                <div class="competence_item">
+                    <p>CSS</p><progress value="40" max="100">HTML</progress>
+                </div>
+                <div class="competence_item">
+                    <p>ACCESS</p><progress value="90" max="100">HTML</progress>
+                </div>
+                <div class="competence_item">
+                    <p>JavaScript</p><progress value="40" max="100">HTML</progress>
+                </div>
+            </div>
         </main>
         <footer>
             <!--Interet-->
+            <p class="titre_interet">INTERETS</p>
             <div class="interet">
-                <span style="padding-right: 10px; font-weight: bold;">INTERETS</span>
-                <span class="int"><img src="./images/sport.png" alt="sport" class="img_interet">  Développement Logiciel</span>
-                <span class="int"><img src="./images/musique.png" alt="musique" class="img_interet">  Technologie et Innovation</span>
-                <span class="int"><img src="./images/code.png" alt="code" class="img_interet">  Sciences Biologiques</span>
+                <div class="int"><img src="./images/code.png" alt="sport" class="img_interet">  Développement Logiciel</div>
+                <div class="int"><img src="./images/casque_virtuel.png" alt="musique" class="img_interet">  Technologie et Innovation</div>
+                <div class="int"><img src="./images/microscope.png" alt="code" class="img_interet">  Sciences Biologiques</div>
             </div>
         </footer>
     </div>
