--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="bloc_info_item">
                         <span class="Pren_Nom">
                             ABDOULAYE DOUYON
-                        </span><br>
+                        </span><!--<br>-->
                         <span class="Profession">
                             Informaticien
                         </span>
@@ -71,23 +71,23 @@
             <!--Utilisation de grid pour diviser "container"en deux colonnes et des items pour chaque parcours-->
             <div class="container">
                 <div class="item">
-                    <p class="parcour_titre">ODK en cours</p> <br>
-                    <p class="parcour_cont">Developpeur Full-Stack</p><br>
+                    <p class="parcour_titre">ODK en cours</p> <!--<br>-->
+                    <p class="parcour_cont">Developpeur Full-Stack</p><!--<br>-->
                     <p class="parcour_titre">2024</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">DUT Electronique Maintenance Informatique</p> <br>
-                    <p class="parcour_cont">TecnoLab-ISTA</p><br>
+                    <p class="parcour_titre">DUT Electronique Maintenance Informatique</p> <!--<br>-->
+                    <p class="parcour_cont">TecnoLab-ISTA</p><!--<br>-->
                     <p class="parcour_titre">2021-2023</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Licence Génie Biologique</p> <br>
-                    <p class="parcour_cont">Institut des Sciences Appliquées</p><br>
+                    <p class="parcour_titre">Licence Génie Biologique</p> <!--<br>-->
+                    <p class="parcour_cont">Institut des Sciences Appliquées</p><!--<br>-->
                     <p class="parcour_titre">2024</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Baccalauréat Malien</p> <br>
-                    <p class="parcour_cont">Terminale Sciences Expérimentales</p><br>
+                    <p class="parcour_titre">Baccalauréat Malien</p> <!--<br>-->
+                    <p class="parcour_cont">Terminale Sciences Expérimentales</p><!--<br>-->
                     <p class="parcour_titre">2014-2017</p>
                 </div>
             </div>
@@ -104,33 +104,33 @@
             <!--Utilisation de grid pour diviser "container"en deux colonnes et des items pour chaque experience-->
             <div class="container">
                 <div class="item">
-                    <p class="parcour_titre">Stage Bio-Médicale</p> <br>
-                    <p class="parcour_cont">Hôpital du point-G</p><br>
+                    <p class="parcour_titre">Stage Bio-Médicale</p> <!--<br>-->
+                    <p class="parcour_cont">Hôpital du point-G</p><!--<br>-->
                     <p class="parcour_titre">09 août - 10 Septembre 2023</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Gestion de données scolaires</p> <br>
-                    <p class="parcour_cont">CSTD</p><br>
+                    <p class="parcour_titre">Gestion de données scolaires</p> <!--<br>-->
+                    <p class="parcour_cont">CSTD</p><!--<br>-->
                     <p class="parcour_titre">2022 à nos jours</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Certfication en ITE</p> <br>
-                    <p class="parcour_cont">CISCO</p><br>
+                    <p class="parcour_titre">Certfication en ITE</p> <!--<br>-->
+                    <p class="parcour_cont">CISCO</p><!--<br>-->
                     <p class="parcour_titre">2023</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Conception des cartes</p> <br>
-                    <p class="parcour_cont">Divers établissements</p><br>
+                    <p class="parcour_titre">Conception des cartes</p> <!--<br>-->
+                    <p class="parcour_cont">Divers établissements</p><!--<br>-->
                     <p class="parcour_titre">depuis 2021</p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Réparation d'ordinateurs</p> <br>
-                    <p class="parcour_cont">depuis 2021</p><br>
+                    <p class="parcour_titre">Réparation d'ordinateurs</p> <!--<br>-->
+                    <p class="parcour_cont">depuis 2021</p><!--<br>-->
                     <p class="parcour_titre"></p>
                 </div>
                 <div class="item">
-                    <p class="parcour_titre">Conception de site web</p> <br>
-                    <p class="parcour_cont">Académique</p><br>
+                    <p class="parcour_titre">Conception de site web</p> <!--<br>-->
+                    <p class="parcour_cont">Académique</p><!--<br>-->
                     <p class="parcour_titre"></p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
             <!--COMPETENCES-Entete-->
             <div class="titre">
                 COMPETENCES
-            </div><br>
+            </div><!--<br>-->
             <!--les competences-->
             <div class="competence_container">
                 <div class="competence_item">
